just started html

--- a/html/formating.html
+++ b/html/formating.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>formating</h1>
+<h1 style="" >formating</h1>
 <h1>formating</h1>
 <p>formating <b>imp</b>imp</p>
 <p>formating <i>imp</i>imp</p>
