--- a/html/heading.html
+++ b/html/heading.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HEADING</title>
+    <title>Heading</title>
 </head>
-
 <body>
-    <h1>headin 1</h1><hr>
-    <h2>headin 2</h2><hr>
-    <h3>headin 3</h3><hr>
-    <h4>headin 4</h4><hr>
-    <h5>headin 5</h5><hr>
-    <h6>headin 6</h6><hr>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<hr>
-
-        Illo ea ullam voluptates rem enim odit cupiditate tempora saepe alias,<br>
-        et dolorum atque similique beatae eligendi, adipisci consequatur impedit quae eveniet!</p>
-    <pre>my name is anees
-         this is anees awan
-</pre>
-
+    <h1>heading 1</h1>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
+    <h4>heading 4</h4>
+    <h5>heading 5</h5>
+    <h6>heading 6</h6>
+    <h1>awang</h1>
 </body>
-
 </html>
