--- a/html/ass1.html
+++ b/html/ass1.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ass1</title>
+    <title>assignment 2</title>
+    <link rel="icon" type="img/jpg" href="file.jpg">
 </head>
 
 <body>
-    <!-- LOGO START -->
-    <div style="height: 70px;width: 100% ; background-color: #ff0000; display: flex;align-items: center; justify-content: start;padding: 0px 20px;  " >
-        <h1>LOGO</h1>
-    </div>
+
 </body>
 
 </html>
